# brave-core

./: .gitignore  BUILD.gn  brave_paks.gni
android/: brave_java_sources.gni
android/java/strings/: android_brave_strings.grd
app/: brave_generated_resources.grd  generated_resources.grd
browser/: BUILD.gn  brave_browser_main_parts.cc  brave_content_browser_client_browsertest.cc  brave_profile_prefs.cc  brave_profile_prefs_browsertest.cc  brave_tab_helpers.cc
browser/android/preferences/: background_video_playback_tab_helper.cc
browser/brave_webcompat_reporter/: webcompat_reporter_service.cc
browser/extensions/: BUILD.gn  brave_component_loader.cc
browser/extensions/api/: brave_playlists_api.cc  brave_playlists_api.h  brave_rewards_api.h  brave_shields_api.h  brave_sync_api.h  brave_wallet_api.h  rewards_notifications_api.h
browser/extensions/api/settings_private/: brave_prefs_util.cc
browser/net/: BUILD.gn  brave_proxying_url_loader_factory.cc
browser/playlists/: playlists_browsertest.cc
browser/profiles/: brave_profile_impl.cc  brave_profile_manager.cc  brave_profile_manager_browsertest.cc  brave_profile_manager_unittest.cc  profile_util.cc
browser/resources/: resource_ids
browser/resources/settings/: brave_icons.html  brave_settings_overrides.js
browser/resources/settings/brave_help_tips_page/: brave_help_tips_page.js
browser/search_engines/: search_engine_provider_service_browsertest.cc
browser/ui/: BUILD.gn
browser/ui/views/profiles/: brave_profile_menu_view.cc  brave_profile_menu_view.h
browser/ui/views/tabs/: brave_alert_indicator.cc
browser/ui/webui/: brave_rewards_internals_ui.cc  brave_rewards_page_ui.cc  brave_web_ui_controller_factory.cc  brave_webui_source.cc
browser/ui/webui/settings/: brave_default_extensions_handler.cc  brave_default_extensions_handler.h
chromium_src/components/search_engines/: brave_template_url_service_util_unittest.cc
chromium_src/ui/native_theme/: common_theme.cc
common/: brave_switches.cc  brave_switches.h  pref_names.cc  pref_names.h  webui_url_constants.cc
common/extensions/: extension_constants.cc  extension_constants.h
common/extensions/api/: _api_features.json  brave_playlists.json
components/brave_adblock_ui/: brave_adblock.html  brave_adblock.tsx
components/brave_ads/browser/: ads_service_impl.cc  ads_service_impl.h  ads_service_impl_unittest.cc
components/brave_extension/extension/brave_extension/: background.ts  youtubedown.js
components/brave_rewards/browser/: BUILD.gn  rewards_service_browsertest.cc  rewards_service_impl.cc  rewards_service_impl.h
components/brave_rewards/browser/database/: database_ballot_info.h  database_batch_votes.h  database_batch_votes_info.h  database_client_state.h  database_contribution_info.cc  database_contribution_info.h  database_current_reconcile.h  database_media_publisher_info.h  database_publisher.h  database_publisher_state.h  database_reconcile_direction.h  database_report_balance.h  database_surveyor_info.h  database_transaction.h  database_transaction_ballot.h  database_twitch_event_info.h  database_wallet_address.h  database_wallet_info.h  database_wallet_properties.h  publisher_info_database.cc  publisher_info_database.h  publisher_info_database_unittest.cc
components/brave_shields/browser/: brave_shields_util.cc  brave_shields_util.h
components/brave_wayback_machine/: resources.grd
components/brave_wayback_machine/browser/: wayback_machine_util.cc  wayback_machine_util.h
components/brave_wayback_machine/extension/: BUILD.gn
components/brave_webcompat_reporter_ui/: brave_webcompat_reporter.html  brave_webcompat_reporter.tsx
components/brave_webcompat_reporter_ui/components/: ConfirmationView.tsx  ReportView.tsx  WebcompatReportModal.tsx
components/brave_webcompat_reporter_ui/stories/: story.tsx
components/definitions/: chromel.d.ts  global.d.ts  rewards.d.ts
components/playlists/browser/: playlists_controller.cc  playlists_controller.h  playlists_service.cc
components/resources/: brave_components_strings.grd
components/services/bat_ledger/: bat_ledger_client_mojo_proxy.cc  bat_ledger_client_mojo_proxy.h  bat_ledger_impl.cc  bat_ledger_impl.h
patches/: android_webview-BUILD.gn.patch  chrome-VERSION.patch  chrome-android-BUILD.gn.patch  chrome-android-java-AndroidManifest.xml.patch  chrome-android-java-res-layout-new_tab_page_incognito.xml.patch  chrome-android-java-res-values-dimens.xml.patch  chrome-android-java-res-values-styles.xml.patch  chrome-android-java-res-values-v17-styles.xml.patch  chrome-android-java-src-org-chromium-chrome-browser-ChromeTabbedActivity.java.patch  chrome-android-java-src-org-chromium-chrome-browser-preferences-Preferences.java.patch  chrome-android-java-src-org-chromium-chrome-browser-search_engines-TemplateUrlServiceFactory.java.patch  chrome-browser-about_flags.cc.patch  chrome-browser-resources-settings-people_page-people_page.html.patch  chrome-browser-resources-settings-route.js.patch  chrome-browser-ui-cocoa-main_menu_builder.mm.patch  chrome-browser-ui-views-toolbar-toolbar_view.cc.patch  chrome-test-BUILD.gn.patch  components-search_engines-android-BUILD.gn.patch  components-search_engines-android-java-src-org-chromium-components-search_engines-TemplateUrlService.java.patch  content-browser-frame_host-navigation_controller_impl.cc.patch  content-browser-frame_host-navigation_request.cc.patch  net-cookies-canonical_cookie.cc.patch  third_party-blink-renderer-core-html-canvas-html_canvas_element.cc.patch  tools-metrics-histograms-histograms.xml.patch
test/: BUILD.gn
ui/webui/resources/: brave_webui_resources.grd
(+30 files in other folders)
