import("//brave/components/brave_rewards/browser/buildflags/buildflags.gni")
import("//extensions/buildflags/buildflags.gni")

source_set("browser") {
  public_deps = [
    "buildflags",
  ]

  sources = [
    "switches.cc",
    "switches.h",
    "auto_contribution_props.cc",
    "auto_contribution_props.h",
    "balance_report.cc",
    "balance_report.h",
    "rewards_notification_service.cc",
    "rewards_notification_service.h",
    "rewards_notification_service_observer.h",
    "content_site.cc",
    "content_site.h",
    "rewards_service.cc",
    "rewards_service.h",
    "rewards_service_factory.cc",
    "rewards_service_factory.h",
    "rewards_service_observer.h",
    "wallet_properties.cc",
    "wallet_properties.h",
    "grant.cc",
    "grant.h",
    "pending_contribution.cc",
    "pending_contribution.h",
    "publisher_banner.cc",
    "publisher_banner.h",
    "reconcile_info.cc",
    "reconcile_info.h",
    "recurring_donation.cc",
    "recurring_donation.h",
    "rewards_internals_info.cc",
    "rewards_internals_info.h",
    "balance.cc",
    "balance.h",
    "external_wallet.cc",
    "external_wallet.h",
    "rewards_protocol_handler.h",
    "rewards_protocol_handler.cc",
    "static_values.h",
  ]

  deps = [
    "//base",
    "//brave/components/brave_rewards/common",
    "//components/keyed_service/content",
    "//components/keyed_service/core",
    "//components/sessions",
    # for profile.h
    "//components/domain_reliability",
    "//content/public/browser",
    "//content/public/common",
    "//services/network/public/mojom",
    "//third_party/leveldatabase",
  ]

  if (!is_android) {
    # on android, one shot is part of base lib
    deps += [
      # for one shot event
      "//extensions/common",
    ]
  }

  if (brave_rewards_enabled) {
    sources += [
      "database/database_ballot_info.cc",
      "database/database_ballot_info.h",
      "database/database_batch_votes_info.cc",
      "database/database_batch_votes_info.h",
      "database/database_batch_votes.cc",
      "database/database_batch_votes.h",
      # "database/database_client_state.cc",
      # "database/database_client_state.h",
      "database/database_contribution_info.cc",
      "database/database_contribution_info.h",
      "database/database_current_reconcile.cc",
      "database/database_current_reconcile.h",
      # "database/database_grant.cc",
      # "database/database_grant.h",
      # "database/database_media_publisher_info.cc",
      # "database/database_media_publisher_info.h",
      # "database/database_publisher_state.cc",
      # "database/database_publisher_state.h",
      # "database/database_publisher.cc",
      # "database/database_publisher.h",
      # "database/database_reconcile_direction.cc",
      # "database/database_reconcile_direction.h",
      # "database/database_report_balance.cc",
      # "database/database_report_balance.h",
      "database/database_server_publisher_amounts.cc",
      "database/database_server_publisher_amounts.h",
      "database/database_server_publisher_banner.cc",
      "database/database_server_publisher_banner.h",
      "database/database_server_publisher_info.cc",
      "database/database_server_publisher_info.h",
      "database/database_server_publisher_links.cc",
      "database/database_server_publisher_links.h",
      # "database/database_surveyor_info.cc",
      # "database/database_surveyor_info.h",
      "database/database_table.cc",
      "database/database_table.h",
      # "database/database_transaction_ballot.cc",
      # "database/database_transaction_ballot.h",
      # "database/database_transaction.cc",
      # "database/database_transaction.h",
      # "database/database_twitch_event_info.cc",
      # "database/database_twitch_event_info.h",
      # "database/database_wallet_address.cc",
      # "database/database_wallet_address.h",
      # "database/database_wallet_info.cc",
      # "database/database_wallet_info.h",
      # "database/database_wallet_properties.cc",
      # "database/database_wallet_properties.h",
      # "database/publisher_info_database.cc",
      # "database/publisher_info_database.h",
      "net/network_delegate_helper.cc",
      "net/network_delegate_helper.h",
      "rewards_service_impl.cc",
      "rewards_service_impl.h",
      "publisher_info_backend.cc",
      "publisher_info_backend.h",
      "rewards_fetcher_service_observer.cc",
      "rewards_fetcher_service_observer.h",
      "rewards_notification_service_impl.cc",
      "rewards_notification_service_impl.h",
    ]

    if (enable_extensions) {
      sources += [
        "extension_rewards_notification_service_observer.cc",
        "extension_rewards_notification_service_observer.h",
        "extension_rewards_service_observer.cc",
        "extension_rewards_service_observer.h",
      ]
    }

    deps += [
      "//brave/vendor/bat-native-ledger",
      "//brave/components/resources",
      "//brave/components/services/bat_ledger/public/cpp",
      "//mojo/public/cpp/bindings",
      "//net",
      "//services/network/public/cpp",
      "//services/service_manager/public/cpp",
      "//url",
    ]
  }
}

# TODO(bridiver) - fix tests on android
if (!is_android) {
source_set("testutil") {
  testonly = true

  deps = [
    "//brave/vendor/bat-native-ledger",
    ":browser",
    "//base",
    "//content/public/browser",
    "//chrome/test:test_support",
    "//testing/gtest",
  ]

  sources = [
    "test_util.cc",
    "test_util.h",
  ]
}
}
